--- a/frameworks/electron-quick-start/index.html
+++ b/frameworks/electron-quick-start/index.html
@@ -6,13 +6,14 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <title>Hello World! with node-rfc</title>
 </head>
 
 <body>
     <h1>Hello World!</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
+    node-rfc <span id="node-rfc-version"></span>
     and Electron <span id="electron-version"></span>.
 
     <!-- You can also require other files to run in this process -->
