--- a/frameworks/electron-quick-start/index.html
+++ b/frameworks/electron-quick-start/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World! with node-rfc</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     node-rfc <span id="node-rfc-version"></span>
