--- a/frameworks/electron-quick-start/index.html
+++ b/frameworks/electron-quick-start/index.html
@@ -6,16 +6,16 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World! with node-rfc</title>
+    <title>electron with node-rfc</title>
 </head>
 
 <body>
-    <h1>Hello World! with node-rfc</h1>
+    <h1>electron with node-rfc</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     node-rfc <span id="node-rfc-version"></span>
     and Electron <span id="electron-version"></span>.
-
+    <br>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
 </body>
